force-app/main/default/objects/Apttus_CMConfig__AgreementFootnote__c/Apttus_CMConfig__AgreementFootnote__c.object-meta.xml
<CustomObject>
    <description>Represents the footnote available in an agreement</description>
    <label>Agreement Footnote</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Footnote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Footnotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>