force-app/main/default/objects/Apttus_CMConfig__AgreementFootnote__c/fields/Apttus_CMConfig__FootnoteBody__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__FootnoteBody__c</fullName>
    <description>The body of the footnote</description>
    <inlineHelpText>The body of the footnote</inlineHelpText>
    <label>Footnote Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>