force-app/main/default/objects/Apttus_CMConfig__AgreementFootnote__c/fields/Apttus_CMConfig__FootnoteText__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__FootnoteText__c</fullName>
    <description>The footnote text</description>
    <label>Footnote Text (Deprecated)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>