force-app/main/default/objects/Apttus_CMConfig__AgreementFootnote__c/fields/Apttus_CMConfig__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product/option associated with the footnote</description>
    <inlineHelpText>ID of the product/option associated with the footnote</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Agreement Footnotes</relationshipLabel>
    <relationshipName>AgreementFootnotes</relationshipName>
    <type>Lookup</type>
</CustomField>