force-app/main/default/objects/Apttus_CMConfig__AgreementFootnote__c/fields/Apttus_CMConfig__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__Sequence__c</fullName>
    <description>The footnote display sequence</description>
    <inlineHelpText>The footnote display sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>